# huawei_projet

./: .gitignore  CMakeLists.txt  README.md  how <哈希值>  main  main.cpp
Docs/: DocDesign.md  DocManual.md  DocRequirement.md
data/: test1.txt
include/: Cube.h  CubeOptimizer.h  DTCube.h  Flow.h  Ligne.h  LigneFinder.h  Network.h  PathFinder.h  Record.h  Scheduler.h  Slice.h  SlicePlanner.h  SliceResolver.h  UAV.h  Utils.h
input/: test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
output/: test1_result.txt
scripts/: run_all.sh  run_tests.sh
src/: Cube.cpp  CubeOptimizer.cpp  DTCube.cpp  Flow.cpp  Ligne.cpp  LigneFinder.cpp  Network.cpp  PathFinder.cpp  Scheduler.cpp  Slice.cpp  SlicePlanner.cpp  UAV.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt  test_ligne.cpp  test_ligne_finder.cpp  test_sliceplanner.cpp
暂时保留的input/: test2_result.txt  test3_result.txt
